--- a/.env.dusk
+++ b/.env.dusk
@@ -1,14 +1,17 @@
 APP_ENV=local
-APP_KEY=base64:ahoFMR7rPRNxeatskqRMl/j5Zn4n8hbY9T6vUbwmBpM=
+APP_KEY=base64:JypYCmfIpZ1gt6jqVBuO7k5MuAGUB7VRxVKibiGz9sk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://foro.in
 
-DB_CONNECTION=mysql_tests
+API_PREFIX=api
+
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=foro_tests
-
+DB_DATABASE=foro_dusk
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,11 +23,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=4c94d1c88c11aa
+MAIL_PASSWORD=810843b223a574
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_KEY=
